	 (fuse-utils_start-crypto-branch)
20030805 Add support for multiple keys in rzxcheck
	 (fuse-utils_start-crypto-branch)
20030807 tzxlist.c: step through the tape, rather than reading the
	 first block an infinite number of times
	 (fuse-utils_start-crypto-branch)
20030811 rzxdump.c: print snapshot path for external snapshots
20030812 Merge crypto branch (at fuse-utils_start-crypto-branch-2)
	 onto HEAD (at fuse-utils_0_6_1pre1-merge-1)
20030821 rzxdump.c: free allocated memory and MPIs at exit.
20030821 rzxtool.c: initialise the snap buffer (to NULL); keeps
	 valgrind happy.
20030821 rzxtool.c: free any snapshot we're using at program exit.
20030822 rzxcheck.c: free signature memory.
20030824 rzxtool.c: free snapshot after writing it rather than before.
20030901 Build rzxcheck iff libgcrypt is present.
20030901 Remove the find an <n>-bit type stuff as that's now done by
	 libspectrum.
20030912 man/: update man pages for the 0.6.1 release.
20030912 ChangeLog: put in 0.6.0 release date.
20030912 ChangeLog: bring up to date for 0.6.1.
20030912 man/rzxtool.1, man/scl2trd.1: small updates.
20030912 README: update for 0.6.1.
20030913 configure.in: bump version number to 0.6.1.
20030921 rzxdump.c: use libgcrypt 1.1.42.
20031006 rzxcheck.c: return 1 if no signature or unknown key.
20031007 tapeconv.c: remove double-free bug if tape reading fails.
20031009 utils.c: add information from uname() into creator custom data.
20031010 utils.c: on Solaris, uname() returns 1 to indicate success.
20031013 Put libspectrum version into creator information, and ensure that
	 libspectrum_init is called by all programs which use libspectrum
	 functions.
20031014 .cvsignore, configure.in, fuse-utils.gpg.in: add QNX6 package
	 file (thanks, Mike Gorchak).
20031014 configure.in, rzxtool.c, scl2trd.c: we need <strings.h> for
	 strncasecmp on QNX6 (thanks, Mike Gorchak).
20031015 Makefile.am, configure.in: no longer need to explicitly link
	 against libgcrypt (except rzxdump) or zlib.